compiler.old/tests/compiler/must_fail/t_05.rs.exp.err
tests/compiler/must_fail/t_05.rs:3:11: 3:12 error: parse error
        _x[i] : stack! (b64);
          ^^
